--- a/src/app/employees/add-employee/personal-detail/personal-detail.component.html
+++ b/src/app/employees/add-employee/personal-detail/personal-detail.component.html
@@ -1,46 +1,72 @@
-<!-- <div id="personal-details" [formGroup]="regForm">
-  <div class="form-group col-md-4" formGroupName="personalDetails">
-    <label>Firstname*</label>
-    <input type="text" class="form-control" formControlName="firstname">
-  </div>
-  <div class="form-group col-md-4" formGroupName="personalDetails">
-    <label>MI</label>
-    <input type="text" class="form-control" formControlName="mi">
-  </div>
-  <div class="form-group col-md-4" formGroupName="personalDetails">
-    <label>Lastname*</label>
-    <input type="text" class="form-control" formControlName="lastname">
-  </div>
-</div> -->
 <mat-card class="mt-3">
   <div class="text-center">
     <label class="personalDetailsLabel">Personal Details</label>
   </div>
-  <div>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+  <div id="personal-details" [formGroup]="regForm">
+    <mat-form-field
+      class="col-4 setInputField"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>First Name</mat-label>
-      <input matInput />
+      <input matInput formControlName="firstName" />
     </mat-form-field>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+    <mat-form-field
+      class="col-4 setInputField"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>Middle Name</mat-label>
-      <input matInput />
+      <input matInput formControlName="middleName" />
     </mat-form-field>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+    <mat-form-field
+      class="col-4"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>Last Name</mat-label>
-      <input matInput />
+      <input matInput formControlName="lastName" />
     </mat-form-field>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+    <mat-form-field
+      class="col-4 setInputField"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>Email</mat-label>
-      <input matInput />
+      <input matInput formControlName="email" />
     </mat-form-field>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+    <mat-form-field
+      class="col-4 setInputField"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>Mobile Number</mat-label>
-      <input matInput />
+      <input matInput formControlName="mobileNumber" />
     </mat-form-field>
-    <mat-form-field class="col-4 setInputField" appearance="fill">
+    <mat-form-field
+      class="col-4"
+      formGroupName="personalDetails"
+      appearance="fill"
+    >
       <mat-label>Contact Number</mat-label>
-      <input matInput />
+      <input matInput formControlName="contactNumber" />
     </mat-form-field>
+    <!-- <mat-form-field
+      class="col-6 setTextArea"
+      formControlName="personalDetails"
+      appearance="fill"
+    >
+      <mat-label>Present Address</mat-label>
+      <textarea matInput formControlName="presentAddress"></textarea>
+    </mat-form-field>
+    <mat-form-field
+      class="col-6"
+      formControlName="personalDetails"
+      appearance="fill"
+    >
+      <mat-label>Permanent Address</mat-label>
+      <textarea matInput formControlName="permanentAddress"></textarea>
+    </mat-form-field> -->
   </div>
 </mat-card>
 <br />
