--- a/src/app/employees/add-employee/bank-detail/bank-detail.component.html
+++ b/src/app/employees/add-employee/bank-detail/bank-detail.component.html
@@ -31,7 +31,7 @@
     </mat-form-field>
     <mat-form-field class="col-4" formGroupName="bankDetails" appearance="fill">
       <mat-label>Bank Account Number</mat-label>
-      <input matInput formControlName="accountNumber" />
+      <input type="number" matInput formControlName="accountNumber" />
     </mat-form-field>
     <mat-form-field
       class="col-4 setInputField"
@@ -47,7 +47,7 @@
       appearance="fill"
     >
       <mat-label>Aadhar Card Number</mat-label>
-      <input matInput formControlName="aadharNumber" />
+      <input type="number" matInput formControlName="aadharNumber" />
     </mat-form-field>
     <mat-form-field class="col-4" formGroupName="bankDetails" appearance="fill">
       <mat-label>Pan Card Number</mat-label>
