--- a/src/app/employees/add-employee/personal-detail/personal-detail.component.html
+++ b/src/app/employees/add-employee/personal-detail/personal-detail.component.html
@@ -51,9 +51,19 @@
       <mat-label>Contact Number</mat-label>
       <input matInput formControlName="contactNumber" />
     </mat-form-field>
-    <!-- <mat-form-field
+    <mat-form-field
       class="col-6 setTextArea"
-      formControlName="personalDetails"
+      appearance="fill"
+      formGroupName="personalDetails"
+    >
+      <mat-label>Birth date</mat-label>
+      <input matInput [matDatepicker]="picker1" formControlName="dob" />
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field
+      class="col-6 setTextArea"
+      formGroupName="personalDetails"
       appearance="fill"
     >
       <mat-label>Present Address</mat-label>
@@ -61,12 +71,12 @@
     </mat-form-field>
     <mat-form-field
       class="col-6"
-      formControlName="personalDetails"
+      formGroupName="personalDetails"
       appearance="fill"
     >
       <mat-label>Permanent Address</mat-label>
       <textarea matInput formControlName="permanentAddress"></textarea>
-    </mat-form-field> -->
+    </mat-form-field>
   </div>
 </mat-card>
 <br />
