--- a/src/app/employees/add-employee/professional-detail/professional-detail.component.html
+++ b/src/app/employees/add-employee/professional-detail/professional-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="formSubmitted">
+<!-- <div *ngIf="formSubmitted">
   <h4>Details submitted successfully</h4>
 </div>
 <div *ngIf="!formSubmitted">
@@ -11,15 +11,15 @@
   <button type="button" matStepperPrevious>Back</button>
   &nbsp;
   <button type="button" (click)="submit()">Submit</button>
-</div>
+</div> -->
 
-<!-- <mat-card class="mt-3">
+<mat-card class="mt-3">
   <div class="text-center">
     <label class="professionalDetailsLabel">Professional Details</label>
   </div>
   <div id="professional-details" [formGroup]="regForm">
     <mat-form-field
-      class="col-4 setInputField"
+      class="col-6 setTextArea"
       formGroupName="professionalDetails"
       appearance="fill"
     >
@@ -27,22 +27,61 @@
       <input matInput formControlName="designation" />
     </mat-form-field>
     <mat-form-field
-      class="col-4 setInputField"
+      class="col-6"
       formGroupName="professionalDetails"
       appearance="fill"
     >
       <mat-label>Department</mat-label>
       <input matInput formControlName="department" />
     </mat-form-field>
+    <mat-label>Experience: </mat-label>
     <mat-form-field
-      class="col-4"
+      class="col-2 setExpYears"
+      appearance="fill"
+      formGroupName="professionalDetails"
+    >
+      <mat-label>Years</mat-label>
+      <mat-select formControlName="expYears">
+        <mat-option *ngFor="let year of expInYears" [value]="year.value">
+          {{ year.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field
+      class="col-2 setExpYears"
+      appearance="fill"
+      formGroupName="professionalDetails"
+    >
+      <mat-label>Months</mat-label>
+      <mat-select formControlName="expMonths">
+        <mat-option *ngFor="let month of expInMonths" [value]="month.value">
+          {{ month.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field
+      class="col-6"
       formGroupName="professionalDetails"
       appearance="fill"
     >
-      <mat-label>Last Name</mat-label>
+      <mat-label>Current Location</mat-label>
       <input matInput formControlName="currentLocation" />
+    </mat-form-field>
+    <mat-form-field
+      class="col-6 setTextArea"
+      appearance="fill"
+      formGroupName="professionalDetails"
+    >
+      <mat-label>Skills</mat-label>
+      <mat-select formControlName="skills">
+        <mat-option *ngFor="let skill of skills" [value]="skill.value">
+          {{ skill.viewValue }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
   </div>
 </mat-card>
 <br />
-<button type="button" matStepperNext (click)="step3Submitted()">Next</button> -->
+<button type="button" matStepperPrevious>Back</button>
+&nbsp;
+<button type="button" matStepperNext (click)="step3Submitted()">Next</button>
