[wip] Add employee

--- a/src/app/components/employees/add-employee/personal-detail/personal-detail.component.html
+++ b/src/app/components/employees/add-employee/personal-detail/personal-detail.component.html
@@ -10,6 +10,7 @@
     >
       <mat-label>First Name</mat-label>
       <input matInput formControlName="firstName" />
+      <!-- <app-validation-message [control]="regForm.controls['personalDetails'].get('firstName')"></app-validation-message> -->
     </mat-form-field>
     <mat-form-field
       class="col-4 setInputField"
