--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -15,10 +15,11 @@
         <ng-template matStepLabel>Bank Details</ng-template>
         <app-bank-detail [regForm]="registrationForm"></app-bank-detail>
       </mat-step>
-      <mat-step
+      <!-- <mat-step
         formGroupName="professionalDetails"
         [stepControl]="registrationForm.get('professionalDetails')"
-      >
+      > -->
+      <mat-step>
         <ng-template matStepLabel>Professional Details</ng-template>
         <app-professional-detail
           [regForm]="registrationForm"
@@ -28,12 +29,12 @@
         formGroupName="educationDetails"
         [stepControl]="registrationForm.get('educationDetails')"
       > -->
-      <mat-step>
+      <!-- <mat-step>
         <ng-template matStepLabel>Education Details</ng-template>
         <app-education-detail
           [regForm]="registrationForm"
         ></app-education-detail>
-      </mat-step>
+      </mat-step> -->
       <!-- <mat-step
         formGroupName="experienceDetails"
         [stepControl]="registrationForm.get('experienceDetails')"
