--- a/src/app/components/employees/add-employee/professional-detail/professional-detail.component.html
+++ b/src/app/components/employees/add-employee/professional-detail/professional-detail.component.html
@@ -1,19 +1,15 @@
-<!-- <div *ngIf="formSubmitted">
+<div *ngIf="formSubmitted">
   <h4>Details submitted successfully</h4>
 </div>
 <div *ngIf="!formSubmitted">
   <h4>Following details submitted, please confirm and hit submit</h4>
-  <br />Name: {{ regForm.get("personalDetails").get("firstname").value }}
-  {{ regForm.get("personalDetails").get("lastname").value }}
-  <br />Email : {{ regForm.get("contactDetails").get("email").value }}
-  <br />Phone :{{ regForm.get("contactDetails").get("phone").value }}
   <br />
   <button type="button" matStepperPrevious>Back</button>
   &nbsp;
   <button type="button" (click)="submit()">Submit</button>
-</div> -->
+</div>
 
-<mat-card class="mt-3">
+<!-- <mat-card class="mt-3">
   <div class="text-center">
     <label class="professionalDetailsLabel">Professional Details</label>
   </div>
@@ -84,4 +80,4 @@
 <br />
 <button type="button" matStepperPrevious>Back</button>
 &nbsp;
-<button type="button" matStepperNext (click)="step3Submitted()">Next</button>
+<button type="button" matStepperNext (click)="step3Submitted()">Next</button> -->
