[wip] Add emoployee

--- a/src/app/components/employees/add-employee/education-detail/education-detail.component.html
+++ b/src/app/components/employees/add-employee/education-detail/education-detail.component.html
@@ -1,12 +1,15 @@
-<div *ngIf="formSubmitted">
+<!-- <div *ngIf="formSubmitted">
   <h4>Details submitted successfully</h4>
 </div>
 <div *ngIf="!formSubmitted">
   <h4>Following details submitted, please confirm and hit submit</h4>
-  <!-- <br />Name: {{ regForm.get("personalDetails").get("firstname").value }}
-  {{ regForm.get("personalDetails").get("lastname").value }} -->
   <br />
   <button type="button" matStepperPrevious>Back</button>
   &nbsp;
   <button type="button" (click)="submit()">Submit</button>
-</div>
+</div> -->
+
+<br />
+<button type="button" matStepperPrevious>Back</button>
+&nbsp;
+<button type="button" matStepperNext (click)="step4Submitted()">Next</button>
