--- a/src/app/components/employees/add-employee/professional-detail/professional-detail.component.html
+++ b/src/app/components/employees/add-employee/professional-detail/professional-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="formSubmitted">
+<!-- <div *ngIf="formSubmitted">
   <h4>Details submitted successfully</h4>
 </div>
 <div *ngIf="!formSubmitted">
@@ -7,9 +7,9 @@
   <button type="button" matStepperPrevious>Back</button>
   &nbsp;
   <button type="button" (click)="submit()">Submit</button>
-</div>
+</div> -->
 
-<!-- <mat-card class="mt-3">
+<mat-card class="mt-3">
   <div class="text-center">
     <label class="professionalDetailsLabel">Professional Details</label>
   </div>
@@ -80,4 +80,4 @@
 <br />
 <button type="button" matStepperPrevious>Back</button>
 &nbsp;
-<button type="button" matStepperNext (click)="step3Submitted()">Next</button> -->
+<button type="button" matStepperNext (click)="step3Submitted()">Next</button>
