--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -15,33 +15,34 @@
         <ng-template matStepLabel>Bank Details</ng-template>
         <app-bank-detail [regForm]="registrationForm"></app-bank-detail>
       </mat-step>
-      <!-- <mat-step
+      <mat-step
         formGroupName="professionalDetails"
         [stepControl]="registrationForm.get('professionalDetails')"
-      > -->
-      <mat-step>
+      >
+      <!-- <mat-step> -->
         <ng-template matStepLabel>Professional Details</ng-template>
         <app-professional-detail
           [regForm]="registrationForm"
         ></app-professional-detail>
       </mat-step>
-      <!-- <mat-step
+      <mat-step
         formGroupName="educationDetails"
         [stepControl]="registrationForm.get('educationDetails')"
-      > -->
-      <!-- <mat-step>
+      >
+      <!-- <mat-step> -->
         <ng-template matStepLabel>Education Details</ng-template>
         <app-education-detail
           [regForm]="registrationForm"
         ></app-education-detail>
-      </mat-step> -->
+      </mat-step>
       <!-- <mat-step
         formGroupName="experienceDetails"
         [stepControl]="registrationForm.get('experienceDetails')"
-      >
+      > -->
+      <mat-step>
         <ng-template matStepLabel>Experience Details</ng-template>
-        <app-bank-detail [regForm]="registrationForm"></app-bank-detail>
-      </mat-step>-->
+        <app-experience-detail [regForm]="registrationForm"></app-experience-detail>
+      </mat-step>
       <!-- <mat-step>
         <ng-template matStepLabel>Current organization Details</ng-template>
         <app-professional-detail
