--- a/src/app/components/employees/add-employee/experience-detail/experience-detail.component.html
+++ b/src/app/components/employees/add-employee/experience-detail/experience-detail.component.html
@@ -1,1 +1,10 @@
-<p>experience-detail works!</p>
+<div *ngIf="formSubmitted">
+    <h4>Details submitted successfully</h4>
+  </div>
+  <div *ngIf="!formSubmitted">
+    <h4>Following details submitted, please confirm and hit submit</h4>
+    <br />
+    <button type="button" matStepperPrevious>Back</button>
+    &nbsp;
+    <button type="button" (click)="submit()">Submit</button>
+  </div>
